[project]
name = "cli-mktstatus"
version = "0.1.0"
description = "CLI tool for querying EVE Online market statistics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tabulate>=0.9.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
mktstatus = "main:main"
